--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
   </div>
   
   <div class="span6 btn-group">
-    <%= link_to t('new_user'), new_user_path, :class => 'btn btn-large btn-primary' %>
+    <%#= link_to t('new_user'), new_user_path, :class => 'btn btn-large btn-primary' %>
   </div>
 <% end %>
 
@@ -17,41 +17,28 @@
 <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:email) %></th>
-      <th><%= model_class.human_attribute_name(:remember_created_at) %></th>
-      <th><%= model_class.human_attribute_name(:sign_in_count) %></th>
-      <th><%= model_class.human_attribute_name(:current_sign_in_at) %></th>
-      <th><%= model_class.human_attribute_name(:last_sign_in_at) %></th>
-      <th><%= model_class.human_attribute_name(:current_sign_in_ip) %></th>
-      <th><%= model_class.human_attribute_name(:last_sign_in_ip) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th></th>
+      <th># Sign Ins</th>
+      <th>Last Sign In</th>
+      <!--th><%=t '.actions', :default => t("helpers.actions") %></th-->
     </tr>
   </thead>
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.id, user_path(user) %></td>
-        <td><%= user.email %></td>
-        <td><%= user.remember_created_at %></td>
+        <td><%= link_to user.name_inverted, user_path(user) %> (<%= user.id %>)</td>
         <td><%= user.sign_in_count %></td>
-        <td><%= user.current_sign_in_at %></td>
-        <td><%= user.last_sign_in_at %></td>
-        <td><%= user.current_sign_in_ip %></td>
-        <td><%= user.last_sign_in_ip %></td>
-        <td><%= user.name %></td>
-        <td><%=l user.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+        <td><%= user.last_sign_in_at.present? ? "#{time_ago_in_words user.last_sign_in_at} ago" : "Never" %></td>
+        
+        <!--td>
+          <%#= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_user_path(user), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       user_path(user),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
-        </td>
+        </td-->
       </tr>
     <% end %>
   </tbody>
