--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,33 +14,6 @@
 
 <%- model_class = User -%>
 
-<%= content_for(:breadcrumb) do %>
-  <!--div class="span6">
-    <ul class="breadcrumb">
-      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
-      <% if resource.organization %>
-        <li><%= link_to resource.organization, [resource.organization] %><span class="divider">/</span></li>
-      <% end %>
-      <li><%= link_to t('divisions'), [current_user, :divisions] %><span class="divider">/</span></li>
-      <li><%= link_to resource.divisions.first, resource.divisions.first  %><span class="divider">/</span></li>
-      <li class="active"><%= resource %></li>
-    </ul>
-  </div>  
-  
-  <div class="span6 btn-group">
-    <%= link_to t('download'), user_path(@user,format:'csv'), class: 'btn btn-primary ' %>
-     <% if can?(:update, @user) %>
-       <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_user_path(@user), :class => 'btn ' %>
-     <% end %>
-     <% if can?(:create, RecordedMetric) %>
-        <%= link_to t('record_metric'), new_user_recorded_metric_path(resource), :class => 'btn btn-info ' %>
-     <% end %>
-     <% if can?(:update, @user) %>
-      <%= link_to t('metrics'), [:dashboard,@user], :class => 'btn ' %>
-    <% end %>
-  </div-->
-<% end %>
-
 <!--div class="row-fluid" style="margin-bottom: 30px;">
   <div class="span2">
     <img src="http://placehold.it/300x300">
@@ -65,13 +38,6 @@
   <li><a href="#" data-target="#recovery-profile">Recovery Profile</a></li>
   <li class="active"><a href="#" data-target="#dashboard">Dashboard</a></li>
   <li><a href="#" data-target="#admin">Admin</a></li>
-  <!--li><a href="#" >Surveys</a></li>
-  <li><a href="#">Workouts</a></li>
-  <li><a href="#">Alerts</a></li>
-  <li><a href="#">Announcements</a></li>
-  <li><a href="#">Activity</a></li>
-  <li><a href="#">Awards</a></li>
-  <li><a href="#">Comments</a></li-->
 </ul>
 
 <div id="recovery-profile" class="player-panel" style="display:none;">
@@ -117,37 +83,40 @@
         </tbody>
       </table>
       <%= will_paginate @completed_surveys %>
-      <!--h3>Awards</h3>
-      <table class="table table-striped">
-        <tbody>
-          <tr>
-            <td class="award-cell">
-              <%= image_tag "http://content.sportslogos.net/logos/54/71/full/2309.gif" %><br />
-              <strong>Iron Pirate</strong>
-            </td>
-            <td>10/12/2014</td>
-            <td>
-              Given to members of the 400lb bench-press club
-            </td>
-          </tr>
-          <tr>
-            <td class="award-cell">
-              <%= image_tag "https://cdn0.iconfinder.com/data/icons/elite-sports/512/trophy-fill-512.png" %><br />
-              <strong>Mr. Consistent</strong>
-            </td>
-            <td>8/2/2014</td>
-            <td>
-              20 days without missing a workout
-            </td>
-          </tr>
-        </tbody>
-      </table-->
+      
+      <div style="display:none;">
+        <h3>Awards</h3>
+        <table class="table table-striped">
+          <tbody>
+            <tr>
+              <td class="award-cell">
+                <%= image_tag "http://content.sportslogos.net/logos/54/71/full/2309.gif" %><br />
+                <strong>Iron Pirate</strong>
+              </td>
+              <td>10/12/2014</td>
+              <td>
+                Given to members of the 400lb bench-press club
+              </td>
+            </tr>
+            <tr>
+              <td class="award-cell">
+                <%= image_tag "https://cdn0.iconfinder.com/data/icons/elite-sports/512/trophy-fill-512.png" %><br />
+                <strong>Mr. Consistent</strong>
+              </td>
+              <td>8/2/2014</td>
+              <td>
+                20 days without missing a workout
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
   
-  <div class="row-fluid">
+  <div style="display:none;" class="row-fluid">
     <div class="span4">
-      <!--h3>Workouts</h3>
+      <h3>Workouts</h3>
       <table class="table table-striped">
         <tbody>
           <tr>
@@ -171,11 +140,11 @@
             <td><a href="#">Download</a></td>
           </tr>
         </tbody>
-      </table-->
+      </table>
     </div>
     
     <div class="span4">
-      <!--h3><%= t('surveys') %></h3>
+      <h3><%= t('surveys') %></h3>
       <table class="table table-striped">
         <thead>
           <tr>
@@ -194,19 +163,19 @@
           <% end %>
         </tbody>
       </table>
-      <%= will_paginate @completed_surveys %>-->
+      <%= will_paginate @completed_surveys %>
     </div>
     
     <div class="span4">
-      <!--h3>Announcements</h3>
+      <h3>Announcements</h3>
       <blockquote><h5>Workouts Cancelled</h5><p>The team will not be meeting for normal workouts tomorrow</p> <small>Brendon Huttmann <cite>2014-01-05</cite></small></blockquote>
       <blockquote><h5>Kyle Mcpherson</h5><p>Kyle is rejoining the team after 3 weeks on the self. Let's welcome him back</p> <small>Brendon Huttmann <cite>2013-01-05</cite></small></blockquote>
-    </div-->
+    </div>
   </div>
   
-  <div class="row-fluid">
+  <div style="display:none;" class="row-fluid">
     <div class="span6">
-      <!--h3>Activity</h3>
+      <h3>Activity</h3>
       <ul class="media-list">
         <li class="media">
           <a class="pull-left" href="#">
@@ -227,12 +196,12 @@
             <p>Just joined the Iron Pirate Club</p>
           </div>
         </li>
-      </ul-->
+      </ul>
     </div>
 
     
     <div class="span6">
-      <!--h3>Inbox</h3>
+      <h3>Inbox</h3>
       
       <ul class="media-list">
         <li class="media">
@@ -254,7 +223,7 @@
             <p>Keep up the good work</p>
           </div>
         </li>
-      </ul-->
+      </ul>
     </div>
     
   </div>
@@ -318,7 +287,6 @@
 </div>
 
 <div id="performance-profile" class="player-panel" style="display:none;">
-  <!--h2>Performance Profile</h2-->
   <h5>Compared To: <strong><%= link_to @comparison, @comparison %></strong> <small>(<a id="performance-toggle" href="#">Change</a>)</small></h5>
   <form style="display:none;">
     <input type="hidden" id="compare-type" value="<%= @comparison.class.name %>">
@@ -379,69 +347,3 @@
     </div>
   </div>
 </div>
-
-<!--div class="accordion" id="accordion">
-
-    
-
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <h4 class="accordion-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#last_5_days">
-          <%=t 'last_5_days', number: '5' %>
-        </a>
-      </h4>
-    </div>
-    <div id="last_5_days" class="accordion-collapse collapse">
-      <div class="accordion-body">
-        <div class="graph" data-user_id="<%= @user.id %>" data-day_range="5"></div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <h4 class="accordion-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#last_10_days">
-          <%=t 'last_10_days', number: '10' %>
-        </a>
-      </h4>
-    </div>
-    <div id="last_10_days" class="accordion-collapse collapse">
-      <div class="accordion-body">
-        <div class="graph" data-user_id="<%= @user.id %>" data-day_range="10"></div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <h4 class="accordion-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#last_15_days">
-          <%=t 'last_15_days', number: '15' %>
-        </a>
-      </h4>
-    </div>
-    <div id="last_15_days" class="accordion-collapse collapse">
-      <div class="accordion-body">
-        <div class="graph" data-user_id="<%= @user.id %>" data-day_range="15"></div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <h4 class="accordion-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#last_30_days">
-          <%=t 'last_30_days', number: '30' %>
-        </a>
-      </h4>
-    </div>
-    <div id="last_30_days" class="accordion-collapse collapse">
-      <div class="accordion-body">
-        <div class="graph" data-user_id="<%= @user.id %>" data-day_range="30"></div>
-      </div>
-    </div>
-  </div>
-  
-</div-->
