--- a/app/views/assigned_questions/_form.html.erb
+++ b/app/views/assigned_questions/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.simple_fields_for :question do |question_form| %>
     <%= question_form.input :organization_id, as: :hidden, input_html: {value: parent.organization.id} %>
     <%= question_form.input :measures_dimension, as: :boolean %>
+    <%= question_form.input :allow_free_form_response, as: :boolean %>
     <% (resource.organization || parent.organization).locales.each do |l| %>
       <h4><%=t l.name %></h4>
       <%= question_form.globalize_fields_for l.code.to_sym do |g| %>
