--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -62,7 +62,7 @@
 
 <ul class="user-home nav nav-pills">
   <li><a href="#" data-target="#performance-profile">Performance Profile</a></li>
-  <li><a href="#" data-target="#recovery-profile">Recovery Profile</a></li>
+  <!--li><a href="#" data-target="#recovery-profile">Recovery Profile</a></li-->
   <li class="active"><a href="#" data-target="#dashboard">Dashboard</a></li>
   <li><a href="#" data-target="#admin">Admin</a></li>
   <!--li><a href="#" >Surveys</a></li>
@@ -200,8 +200,8 @@
     <div class="span4">
       <!--h3>Announcements</h3>
       <blockquote><h5>Workouts Cancelled</h5><p>The team will not be meeting for normal workouts tomorrow</p> <small>Brendon Huttmann <cite>2014-01-05</cite></small></blockquote>
-      <blockquote><h5>Kyle Mcpherson</h5><p>Kyle is rejoining the team after 3 weeks on the self. Let's welcome him back</p> <small>Brendon Huttmann <cite>2013-01-05</cite></small></blockquote>
-    </div-->
+      <blockquote><h5>Kyle Mcpherson</h5><p>Kyle is rejoining the team after 3 weeks on the self. Let's welcome him back</p> <small>Brendon Huttmann <cite>2013-01-05</cite></small></blockquote-->
+    </div>
   </div>
   
   <div class="row-fluid">
