--- a/app/views/home/_admin_home.html.erb
+++ b/app/views/home/_admin_home.html.erb
@@ -60,7 +60,10 @@
 </div>
 
 <div class="row-fluid">
-  <div class="span6">
+  <div class="span4">
+    <h2><a href="/divisions">Recovery App</a></h2>
+  </div>
+  <div class="span4">
     <h2>Recent Alerts <small>Since your last login</small></h2>
     <% cache(cache_key_for_alerts(current_user)) do %>
       <% AssignedAlert.recent_for(current_user).each do |assigned_alert| %>
@@ -68,7 +71,7 @@
       <% end %>
     <% end %>
   </div>
-  <div class="span6">
+  <div class="span4">
     <h2>Recent Activity</h2>
     <% Comment.where{ (created_at > my{current_user.last_sign_in_at}) & (for_user_id >> my{current_user.users.pluck('users.id')})}.each do |comment| %>
       <blockquote><p><%= comment.body %></p> <small><%= comment.commenter.try(:name) %> on <%= comment.user %> <cite><%= comment.left_on %></cite></small></blockquote>
